0.7.1/_sources/gallery/3D_image_plane_rendering.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/3D_image_plane_rendering.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_3D_image_plane_rendering.py>`
        to download the full example as a Python script or as a
        Jupyter notebook..

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_3D_image_plane_rendering.py:


3D image plane rendering
========================

Display one 3D image layer and display it as a plane
with a simple widget for modifying plane parameters.

.. tags:: visualization-advanced, gui, layers

.. GENERATED FROM PYTHON SOURCE LINES 10-56



.. image-sg:: /gallery/images/sphx_glr_3D_image_plane_rendering_001.png
   :alt: 3D image plane rendering
   :srcset: /gallery/images/sphx_glr_3D_image_plane_rendering_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import numpy as np
    from skimage import data

    import napari
    from napari.utils.translations import trans

    viewer = napari.Viewer(ndisplay=3)

    # add a 3D image
    blobs = data.binary_blobs(
        length=64, volume_fraction=0.1, n_dim=3
    ).astype(np.float32)
    image_layer = viewer.add_image(
        blobs, rendering='mip', name='volume', blending='additive', opacity=0.25
    )

    # add the same 3D image and render as plane
    # plane should be in 'additive' blending mode or depth looks all wrong
    plane_parameters = {
        'position': (32, 32, 32),
        'normal': (0, 1, 0),
        'thickness': 10,
    }

    plane_layer = viewer.add_image(
        blobs,
        rendering='average',
        name='plane',
        depiction='plane',
        blending='additive',
        opacity=0.5,
        plane=plane_parameters
    )
    viewer.axes.visible = True
    viewer.camera.angles = (0, -30, 35)
    viewer.fit_to_view()
    viewer.text_overlay.text = trans._(
    """shift + click and drag to move the plane
    press 'x', 'y' or 'z' to orient the plane along that axis around the cursor
    press 'o' to orient the plane normal along the camera view direction
    press and hold 'o' then click and drag to make the plane normal follow the camera
    """
    )
    viewer.text_overlay.visible = True
    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_3D_image_plane_rendering.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 3D_image_plane_rendering.ipynb <3D_image_plane_rendering.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 3D_image_plane_rendering.py <3D_image_plane_rendering.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 3D_image_plane_rendering.zip <3D_image_plane_rendering.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
